--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
     compile 'com.google.android.gms:play-services-ads:8.1.0'
     compile 'com.google.apis:google-api-services-youtube:v3-rev149-1.20.0'
+    compile 'org.apache.httpcomponents:httpclient:4.5.1'
 }
