--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,17 +22,20 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".PlayerActivity"
+            android:name=".youtube.PlayerActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden"
             android:label="@string/title_activity_player"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.Youtube" >
         </activity>
     </application>
 
