--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.google.apis:google-api-services-youtube:v3-rev149-1.20.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
+    compile 'com.android.support:cardview-v7:23.1.0'
 }
