--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'org.twitter4j:twitter4j:4.0.4'
+    compile 'org.twitter4j:twitter4j-core:4.0.4'
 }
