--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         </activity>
         <activity
             android:name=".twitter.TwitterActivity"
-            android:label="@string/title_activity_twitter"
+            android:label="@string/twitter_jdg"
             android:theme="@style/AppTheme.Twitter.NoActionBar" >
             <data
                 android:host="t4jsample"
