--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
     <application
         android:allowBackup="true"
+        android:name="com.paocorp.joueurdugrenier.models.ShowAdsApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
