--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,14 @@
         android:xlargeScreens="true" />
 
     <application
+        android:name=".models.ShowAdsApplication"
         android:allowBackup="true"
-        android:name="com.paocorp.joueurdugrenier.models.ShowAdsApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".JDGActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
@@ -33,6 +33,12 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".BazarActivity"
+            android:label="@string/title_activity_bazar"
+            android:theme="@style/AppTheme.Bazar.NoActionBar"
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden">
+        </activity>
+        <activity
             android:name=".youtube.PlayerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_player"
@@ -42,7 +48,8 @@
         <activity
             android:name=".twitter.TwitterActivity"
             android:label="@string/twitter_jdg"
-            android:theme="@style/AppTheme.Twitter.NoActionBar" >
+            android:theme="@style/AppTheme.Twitter.NoActionBar"
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden">
             <data
                 android:host="t4jsample"
                 android:scheme="oauth" />
@@ -50,7 +57,8 @@
         <activity
             android:name=".twitter.WebViewActivity"
             android:label="@string/login_instructions"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden">
         </activity>
     </application>
 
