--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.paocorp.joueurdugrenier"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 3
+        versionCode 5
         versionName "1.0"
     }
     buildTypes {
@@ -30,4 +30,5 @@ dependencies {
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'org.twitter4j:twitter4j:4.0.4'
     compile 'org.twitter4j:twitter4j-core:4.0.4'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
