--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
+            android:launchMode="singleInstance"
             android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,6 +36,7 @@
         <activity
             android:name=".BazarActivity"
             android:label="@string/title_activity_bazar"
+            android:launchMode="singleInstance"
             android:theme="@style/AppTheme.Bazar.NoActionBar"
             android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden">
         </activity>
