--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity
             android:name=".BazarActivity"
             android:label="@string/title_activity_bazar"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:launchMode="singleInstance"
             android:theme="@style/AppTheme.Bazar.NoActionBar"
             android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden">
