--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.paocorp.joueurdugrenier" >
+    package="com.paocorp.joueurdugrenier">
 
     <!-- Include required permissions for Google Mobile Ads to run -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -19,35 +19,41 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".JDGActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleInstance"
-            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:theme="@style/AppTheme"
+                android:value="com.joueurdugrenier.JDGActivity" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:theme="@style/AppTheme"
+                android:resource="@xml/searchable" />
         </activity>
         <activity
             android:name=".BazarActivity"
-            android:label="@string/title_activity_bazar"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_bazar"
             android:launchMode="singleInstance"
             android:theme="@style/AppTheme.Bazar.NoActionBar"
-            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden">
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden"/>
         <activity
             android:name=".youtube.PlayerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_player"
             android:theme="@style/AppTheme.Youtube"
-            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden" >
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden"/>
         <activity
             android:name=".twitter.TwitterActivity"
             android:label="@string/twitter_jdg"
@@ -61,8 +67,7 @@
             android:name=".twitter.WebViewActivity"
             android:label="@string/login_instructions"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden">
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden"/>
     </application>
 
 </manifest>
