--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,14 +32,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.default_searchable"
                 android:theme="@style/AppTheme"
                 android:value="com.joueurdugrenier.JDGActivity" />
             <meta-data
                 android:name="android.app.searchable"
-                android:theme="@style/AppTheme"
-                android:resource="@xml/searchable" />
+                android:resource="@xml/searchable"
+                android:theme="@style/AppTheme" />
         </activity>
         <activity
             android:name=".BazarActivity"
@@ -47,13 +48,25 @@
             android:label="@string/title_activity_bazar"
             android:launchMode="singleInstance"
             android:theme="@style/AppTheme.Bazar.NoActionBar"
-            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden"/>
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:theme="@style/AppTheme"
+                android:value="com.joueurdugrenier.BazarActivity" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"
+                android:theme="@style/AppTheme" />
+        </activity>
         <activity
             android:name=".youtube.PlayerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_player"
             android:theme="@style/AppTheme.Youtube"
-            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden"/>
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden" />
         <activity
             android:name=".twitter.TwitterActivity"
             android:label="@string/twitter_jdg"
@@ -67,7 +80,7 @@
             android:name=".twitter.WebViewActivity"
             android:label="@string/login_instructions"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden"/>
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden" />
     </application>
 
 </manifest>
