--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.paocorp.joueurdugrenier"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 24
+        versionCode 26
         versionName "1.4.1"
     }
     buildTypes {
@@ -20,15 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.google.android.gms:play-services-ads:9.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.twitter4j:twitter4j:4.0.4'
     compile 'org.twitter4j:twitter4j-core:4.0.4'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.google.apis:google-api-services-youtube:v3-rev171-1.22.0'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev173-1.22.0'
 }
