--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.paocorp.joueurdugrenier"
         minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 31
+        targetSdkVersion 24
+        versionCode 32
         versionName "1.6"
     }
     buildTypes {
@@ -20,16 +20,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.google.android.gms:play-services-ads:9.2.1'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
+    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.google.android.gms:play-services-ads:9.4.0'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev178-1.22.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.twitter4j:twitter4j:4.0.4'
     compile 'org.twitter4j:twitter4j-core:4.0.4'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.google.apis:google-api-services-youtube:v3-rev176-1.22.0'
     compile 'com.einmalfel:earl:1.0.0'
 }
