--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.paocorp.joueurdugrenier"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 32
-        versionName "1.6"
+        versionCode 33
+        versionName "1.7"
     }
     buildTypes {
         release {
@@ -22,9 +22,9 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:design:24.1.1'
-    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
     compile 'com.google.android.gms:play-services-ads:9.4.0'
     compile 'com.google.apis:google-api-services-youtube:v3-rev178-1.22.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -32,4 +32,5 @@ dependencies {
     compile 'org.twitter4j:twitter4j-core:4.0.4'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.einmalfel:earl:1.0.0'
+    compile 'com.roughike:bottom-bar:2.0.2'
 }
