--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,9 @@ android {
         applicationId "com.paocorp.joueurdugrenier"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 37
-        versionName "1.8"
+        versionCode 39
+        versionName "1.9"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
