--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <!-- Include required permissions for Google Mobile Ads to run -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <supports-screens
         android:anyDensity="true"
@@ -77,7 +78,7 @@
             android:label="@string/news"
             android:launchMode="singleInstance"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden"/>
+            android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden" />
         <activity
             android:name=".youtube.PlayerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -98,6 +99,24 @@
             android:label="@string/login_instructions"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize|stateVisible|stateAlwaysHidden" />
+
+        <receiver
+            android:name=".services.JDGAlarmReceiver"
+            android:process=":remote"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".services.JDGService"
+            android:exported="false" />
+
+        <activity
+            android:name=".SettingsActivity"
+            android:theme="@style/SettingsTheme"
+            android:label="@string/action_settings"/>
     </application>
 
 </manifest>
