--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashActivity"
+            android:name=".activities.SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/Theme.Transparent">
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".JDGActivity"
+            android:name=".activities.JDGActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleInstance"
@@ -52,7 +52,7 @@
                 android:theme="@style/AppTheme" />
         </activity>
         <activity
-            android:name=".BazarActivity"
+            android:name=".activities.BazarActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_bazar"
             android:launchMode="singleInstance"
@@ -72,7 +72,7 @@
                 android:theme="@style/AppTheme" />
         </activity>
         <activity
-            android:name=".NewsActivity"
+            android:name=".activities.NewsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/news"
             android:launchMode="singleInstance"
@@ -113,7 +113,7 @@
             android:exported="false" />
 
         <activity
-            android:name=".SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:theme="@style/SettingsTheme"
             android:label="@string/action_settings"/>
     </application>
