--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "com.paocorp.joueurdugrenier"
         minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 51
-        versionName "1.13"
+        targetSdkVersion 26
+        versionCode 53
+        versionName "1.14"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -23,11 +23,11 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.google.android.gms:play-services-ads:11.0.2'
-    compile 'com.google.apis:google-api-services-youtube:v3-rev182-1.22.0'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev183-1.22.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.twitter4j:twitter4j:4.0.4'
     compile 'org.twitter4j:twitter4j-core:4.0.4'
